fixed collapse of companies and social

--- a/css/companies-and-social.css
+++ b/css/companies-and-social.css
@@ -19,7 +19,6 @@
 .companies-and-social-wrapper
 {
   display:flex;
-  flex:1;
   padding:0 1rem;
   flex-direction: row;
   flex-wrap: wrap;
